# wavefront_local

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml  release.sh
.github/workflows/: release.yml
cpp/benchmark/: benchmark_lbiwfa.cpp  benchmark_lwfa.cpp  benchmark_parasail.cpp  benchmark_seqan.cpp
cpp/src/: bifront.cpp  bifront.hpp  bindings.cpp  front.cpp  front.hpp  ini.cpp  ini.hpp  lbiwfa.cpp  lbiwfa.hpp  lwfa.cpp  lwfa.hpp  score.cpp  score.hpp  system.cpp  system.hpp  utils.cpp  utils.hpp
cpp/test/: test_ini.cpp  test_lbiwfa.cpp  test_lwfa.cpp
examples/: example_lbiwfa.cpp  example_lwfa.cpp  lbiwfa.sh  lwfa.sh
paper/: align_test.py  benchmark.ini  benchmark.sh  draw_benchmark.py  generate_benchmark.py  generate_test.py  test.ini
paper/benchmark/result/: diag.csv  lbiwfa.csv  lwfa.csv  scan.csv  seqan.csv  striped.csv
src/wavefront_local/: __init__.py  bindings.cpp  biwfa.py  ini.py  lbiwfa.py  lwfa.py  score.py  test.py  utils.py  wfa.py
test/: data.py
test/py/: test.py
