[project]
name = "wavefront-local"
version = "0.1.1"
description = "Wavefront alignment for the local alignment scope."
readme = "README.md"
authors = [
    { name = "ljw", email = "ljw2017@sjtu.edu.cn" }
]
requires-python = ">=3.14"
dependencies = [
    "biopython>=1.87",
    "jinja2>=3.1.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotnine>=0.15.7",
    "pybind11>=3.0.4",
    "tqdm>=4.68.4",
    "typing-extensions>=4.16.0",
]

[tool.scikit-build]
cmake.build-type = "Release"
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
sdist.exclude = [
    "/.venv",
    "/.vscode",
    "/cpp/benchmark",
    "/cpp/include",
    "/cpp/parasail",
    "/cpp/test",
    "/examples",
    "/paper",
    "/test",
    "/uv.lock",
    "/release.sh",
]
sdist.include = [
    "/cpp/src",
]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "cpp/src/**/*.{h,c,hpp,cpp}" },
    { file = "src/wavefront_local/bindings.cpp" },
    { file = "CMakeLists.txt"},
]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "cibuildwheel",
]
