[project]
name = "wavefront-local"
version = "0.1.2"
description = "Wavefront alignment for the local alignment scope."
readme = "README.md"
authors = [
    { name = "ljw", email = "ljw2017@sjtu.edu.cn" }
]
requires-python = ">=3.14"
dependencies = [
    "biopython>=1.87",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
]

[tool.scikit-build]
cmake.build-type = "Release"
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
sdist.exclude = [
    "/.venv",
    "/.vscode",
    "/cpp/benchmark",
    "/cpp/include",
    "/cpp/parasail",
    "/cpp/test",
    "/examples",
    "/paper",
    "/test",
    "/uv.lock",
    "/release.sh",
]
sdist.include = [
    "/cpp/src",
]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "cpp/src/**/*.{h,c,hpp,cpp}" },
    { file = "src/wavefront_local/bindings.cpp" },
    { file = "CMakeLists.txt"},
]

[build-system]
requires = ["scikit-build-core>=0.12.2", "pybind11>=3.0.4"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "cibuildwheel>=4.1.0",
    "plotnine>=0.15.7",
    "tqdm>=4.68.4",
]
